Fix for nsbeta2+ bug 12152.  r=vidur, pollmann.  Setting the src property during document load works on <IMG> and <INPUT type="image"> elements.